--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,9 @@
 *.log
 .DS_Store
 ._*
-
+.uuid
+config-appdaemon/compiled/js/*
+config-appdaemon/compiled/html/*
+*.pyc
+config-appdaemon/compiled/css/*
+config-appdaemon/compiled/javascript/*
