fix compose error

--- a/config-appdaemon/appdaemon.yaml
+++ b/config-appdaemon/appdaemon.yaml
@@ -13,6 +13,6 @@ HASS:
 
 HADashboard:
   dash_url: http://0.0.0.0:5050
-  dash_dir: /conf/dashboard
+  dash_dir: /conf/dashboards
   dash_force_compile: 1 
   dash_compile_on_start: 1
