--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,14 @@
 *.log
 .DS_Store
 ._*
-.uuid
-config-appdaemon/compiled/**/*
-!config-appdaemon/compiled/**/.keep
+.uuid!
+
+config-appdaemon/compiled/css/*
+config-appdaemon/compiled/html/*
+config-appdaemon/compiled/javascript/*
+
+!config-appdaemon/compiled/css/.keep
+!config-appdaemon/compiled/html/.keep
+!config-appdaemon/compiled/javascript/.keep
 *.pyc
 .HA_VERSION
