--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     environment:
       TZ: Asia/Bangkok
     volumes:
-      - ./config-hass:/config
+      - ./config:/config
     ports:
       - "8123:8123"
     restart: always
@@ -14,6 +14,6 @@ services:
     depends_on: 
       - hass
     volumes:
-      - ./config-appdaemon:/conf
+      - ./config/hadaemon:/conf
     ports:
       - "5050:5050"
