--- a/config/hadaemon/appdaemon.yaml
+++ b/config/hadaemon/appdaemon.yaml
@@ -15,5 +15,6 @@ HADashboard:
   # change to hassio's ip address without port in production
   dash_url: http://0.0.0.0:5050
   dash_dir: /conf/dashboards
+  # dash_dir: /config/hadaemon/dashboards
   dash_force_compile: 1 
   dash_compile_on_start: 1
